k8s/apps/frigate/exporter.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frigate-stats
  namespace: frigate
spec:
  selector:
    matchLabels:
      app: frigate-stats
  replicas: 1
  template:
    metadata:
      labels:
        app: frigate-stats
    spec:
      containers:
      - name: frigate-stats
        image: rhysbailey/prometheus-frigate-exporter
        ports:
        - name:  metrics
          containerPort: 9100
