k8s/apps/frigate/helm.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: homeassistant
  namespace: frigate
  annotations:
    external-dns.alpha.kubernetes.io/hostname: homeassistant.frigate.r.ss
spec:
  type: LoadBalancer
  selector:
    app.kubernetes.io/name: frigate
  ports:
  - name: api
    port: 5000
    targetPort: 5000
  - name: rtmp
    port: 1935
    targetPort: 1935
  - name: go2rtc
    port: 8554
    targetPort: 8554
