k8s/apps/frigate/extra.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: homeassistant
  namespace: frigate
  annotations:
    external-dns.alpha.kubernetes.io/hostname: homeassistant.frigate.r.ss
spec:
  type: LoadBalancer
  selector:
    app.kubernetes.io/name: frigate
  ports:
  - name: api
    port: 5000
    targetPort: 5000
  - name: rtmp
    port: 1935
    targetPort: 1935
  - name: go2rtc
    port: 8554
    targetPort: 8554

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: frigate
  namespace: frigate
spec:
  ingressClassName: nginx
  rules:
    - host: frigate.k8s.rileysnyder.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name:  homeassistant
                port:
                  number: 5000

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: copyparty
  namespace: frigate
spec:
  replicas: 1
  selector:
    matchLabels:
      app: copyparty
  template:
    metadata:
      labels:
        app: copyparty
    spec:
      nodeName: jack
      containers:
      - name: copyparty
        image: copyparty/ac
        imagePullPolicy: IfNotPresent
        ports:
        - name: http
          containerPort: 3923
        volumeMounts:
        - name: files
          mountPath: /files
        - name: config
          mountPath: /cfg
      volumes:
      - name: files
        hostPath:
          path: /mnt/hdd/k3s/frigate
      - name: config
        configMap:
          name: copyparty

---
apiVersion: v1
kind: Service
metadata:
  name: copyparty
  namespace: frigate
  annotations:
    external-dns.alpha.kubernetes.io/hostname: files.frigate.r.ss
spec:
  type: LoadBalancer
  selector:
    app.kubernetes.io/name: copyparty
  ports:
  - name: http
    port: 80
    targetPort: http
